# study-spark

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml
producers/: base_producer.py  simple_producer.py
providers/: base_provider.py
