[project]
name = "spark-study"
version = "0.1.0"
description = ""
authors = [
    {name = "ppjh8263",email = "ppjh8263@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
