[project]
name = "spark-study"
version = "0.1.0"
description = ""
authors = [
    {name = "ppjh8263",email = "ppjh8263@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"
