[tool.poetry]
name = "spark-study"
version = "0.1.0"
description = ""
authors = ["ppjh8263 <ppjh8263@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
confluent-kafka = ">=2.10.1,<3.0.0"
pyyaml = ">=6.0.2,<7.0.0"
google-auth = ">=2.40.3,<3.0.0"
urllib3 = ">=2.5.0,<3.0.0"
aws-msk-iam-sasl-signer-python = ">=1.0.2,<2.0.0"
sshtunnel = ">=0.4.0,<0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"
